--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,19 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#093611",
-        "titleBar.activeBackground": "#0C4B17",
-        "titleBar.activeForeground": "#F1FDF3"
-    }
+        "activityBar.background": "#0a3410",
+        "titleBar.activeBackground": "#020a03",
+        "titleBar.activeForeground": "#e7e7e7",
+        "activityBar.activeBackground": "#0a3410",
+        "activityBar.activeBorder": "#5944db",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#5944db",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "statusBar.background": "#020a03",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#0a3410",
+        "titleBar.inactiveBackground": "#020a0399",
+        "titleBar.inactiveForeground": "#e7e7e799"
+    },
+    "peacock.color": "#020a03"
 }
